[package]
name = "ex_timestamping"
version = "0.1.0"
authors = ["grek.penkin <grek.penkin@gmail.com>"]
publish = false

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "timestamping_run"
path = "bin/src/bin.rs"


[dependencies]
exonum = { git = "https://github.com/exonum/exonum" }
exonum-time = { git = "https://github.com/exonum/exonum" }
exonum-configuration = { git = "https://github.com/exonum/exonum" }
iron = "0.6.0"
bodyparser = "0.8.0"
router = "0.6.0"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.1"
chrono = { version = "0.4.0", features = ["serde"] }
base64 = "0.9.0"
base64-serde = "0.3.0"

tempdir = "0.3.5"
futures = "0.1.14"



